@@ -33,5 +33,10 @@ dependencies {
 }
 
 tasks.withType<Test> {
-	useJUnitPlatform()
+	useJUnitPlatform(),
+
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
 }
